# order-processing

./: .gitignore  README.md
.github/workflows/: ci.yml
infra/: .gitignore  dynamodb.tf  locals.tf  main.tf  outputs.tf  sqs.tf  terraform.tfvars.example  variables.tf
localstack/: .gitignore  docker-compose.yml  prometheus.yml
order-api/: .gitignore  Dockerfile  Makefile  VENV_SETUP.md  activate_venv.ps1  activate_venv.sh  config.py  pyproject.toml  requirements-test.txt  requirements.txt  setup_venv.ps1  setup_venv.sh
order-api/app/: __init__.py  auth.py  deps.py  handler.py  main.py  schemas.py
order-api/tests/: __init__.py  conftest.py  test_auth.py  test_handler.py  test_health.py  test_middleware.py  test_orders.py  test_schemas.py
order-processor/: .gitignore  Dockerfile  Makefile  go.mod
order-processor/cmd/processor/: main.go
order-processor/internal/processor/: processor.go  processor_test.go
scripts/: quickstart.sh  smoke.sh
